- Start adding sticker data

--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,7 @@ modVersion=0.1.0
 branchName=fabric-1.21.8
 compatibleVersions=1.21.8
 compatibleLoaders=fabric
+
+
+# Dependencies
+cca_version = 7.0.0-beta.1
