--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,10 @@ version = "$modVersion+$branchName"
 archivesBaseName = project.slug
 
 repositories {
+	maven {
+		name = "Ladysnake Mods"
+		url = 'https://maven.ladysnake.org/releases'
+	}
 }
 
 dependencies {
@@ -18,6 +22,14 @@ dependencies {
 
 	modImplementation libs.fl
 	modImplementation libs.fapi
+
+	// Replace modImplementation with modApi if you expose components in your own API
+	modImplementation "org.ladysnake.cardinal-components-api:cardinal-components-base:${project.cca_version}"
+	modImplementation "org.ladysnake.cardinal-components-api:cardinal-components-chunk:${project.cca_version}"
+	// Copy the following only if you want to bundle Cardinal Components API as a Jar-in-Jar dependency
+	// (otherwise, you should configure the dependency on Modrinth/Curseforge)
+	//include "org.ladysnake.cardinal-components-api:cardinal-components-base:${project.cca_version}"
+	//include "org.ladysnake.cardinal-components-api:cardinal-components-<MODULE>:${project.cca_version}"
 }
 
 processResources {
